add muliple observers help

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li>use <a href="https://github.com/ViewChild" class="user-mention">@ViewChild</a>('myObs') to recieve the exported observable to your
                 component's class, remember it is only available after ngAfterViewInit hook has been called.
             </li>
+            <li> If You have asked for more than one observable, the resulting export would be of a hash with the event name as the key and the observable as value, else the export is the observable itself </li>
         </ul>
     </section>
 
